--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bike Watching</title>
+    <link rel="stylesheet" href="global.css" />
+    <link rel="icon" href="assets/favicon.svg" type="image/svg+xml" />
 </head>
 <body>
-    
+    <h1>🚴🏼‍♀️ Bikewatching</h1>
+    <p>An interactive map of Bike traffic</p>
 </body>
 </html>
