--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 <body>
     <h1>🚴🏼‍♀️ Bikewatching</h1>
     <p>An interactive map of Bike traffic</p>
-    <div id="map"></div>
+    <div id="map">
+       <svg></svg>
+    </div>
 </body>
 </html>
