--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bike Watching</title>
     <link rel="stylesheet" href="global.css" />
+    <link rel="stylesheet" href="map.css" />
     <link rel="icon" href="assets/favicon.svg" type="image/svg+xml" />
     <!-- Mapbox GL JS CSS -->
     <link
@@ -14,7 +15,15 @@
     <script src="map.js" type="module"></script>
 </head>
 <body>
-    <h1>🚴🏼‍♀️ Bikewatching</h1>
+    <header>
+        <h1>🚴🏼‍♀️ Bikewatching</h1>
+        <label>
+            Filter by time:
+            <input type=range id="time-slider" min = -1 max = 1440>
+            <em id="any-time">(any time)</em>
+            <time id="selected-time"></time>
+        </label>
+    </header>
     <p>An interactive map of Bike traffic</p>
     <div id="map">
        <svg></svg>
