--- a/index.html
+++ b/index.html
@@ -24,9 +24,14 @@
             <time id="selected-time"></time>
         </label>
     </header>
-    <p>An interactive map of Bike traffic</p>
+    
     <div id="map">
        <svg></svg>
+    </div>
+    <div class="legend">
+        <div style="--departure-ratio: 1">More departures</div>
+        <div style="--departure-ratio: 0.5">Balanced</div>
+        <div style="--departure-ratio: 0">More arrivals</div>
     </div>
 </body>
 </html>
